--- a/acheivements.html
+++ b/acheivements.html
@@ -9,8 +9,8 @@
 <body>
     <h3>My Achievements</h3>
     <ul>
-        <li><a href="SparkAR.png">Attended Reskill by SparkAr</a></li>
-        <li><a href="Bootcamp.pdf">Attended NxtWave BootCamp</a></li>
+        <li><a href="./SparkAR.png">Attended Reskill by SparkAr</a></li>
+        <li><a href="./Bootcamp.pdf">Attended NxtWave BootCamp</a></li>
         <li>Worked as PR for CCCBIHER and conducted <a href="https://drive.google.com/drive/folders/1n2Z5-AmjIcF5KHh9TQnAUbkv9c_3lL7g?usp=sharing">Workshops</a></li>
     </ul>
 </body>
