--- a/index.html
+++ b/index.html
@@ -78,6 +78,25 @@
         </tr>
     </table>
     <hr>
+    <h3>Languages Known</h3>
+    <table>
+        <tr>
+            <td>Telugu</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>English</td>
+            <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Hindi</td>
+            <td>⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Tamil</td>
+            <td>⭐</td>
+        </tr>
+    </table>
     <a href="Hobbies.html">Hobbies</a>
     <a href="Contact.html">Contact Me</a>
     <a href="acheivements.html">My Achievements</a>
