--- a/acheivements.html
+++ b/acheivements.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="./SparkAR.png">Attended Reskill by SparkAr</a></li>
         <li><a href="./Bootcamp.pdf">Attended NxtWave BootCamp</a></li>
-        <li>Worked as PR for CCCBIHER and conducted <a href="https://drive.google.com/drive/folders/1n2Z5-AmjIcF5KHh9TQnAUbkv9c_3lL7g?usp=sharing">Workshops</a></li>
+        <li>Worked as Vice-President and PR for <a href="https://cccbiher.herokuapp.com/">CCCBIHER</a> and conducted <a href="https://drive.google.com/drive/folders/1n2Z5-AmjIcF5KHh9TQnAUbkv9c_3lL7g?usp=sharing">Workshops</a></li>
     </ul>
 </body>
 </html>
