--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table>
         <tr>
-            <td><img src='myimg.png' alt="Gowtham's Profile Picture" width ='150' height="150"></td>
+            <td><img src='myimg.jpg' alt="Gowtham's Profile Picture" width ='150' height="150"></td>
             <td><h1>Gowtham Pentela</h1>
             <p><em>Application Development Associate</em></p>
             <p>I'm an aspiring Full Stack Developer who intends to be a part of an organization where I can make best use of my
